// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSPublishers Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-publisher"
  >
    <label
      className="slds-publisher__toggle-visibility slds-m-bottom_small"
      htmlFor="textarea-AAA111"
    >
      <span
        className="slds-assistive-text"
      >
        Write a comment
      </span>
      To: My followers
    </label>
    <textarea
      className="slds-publisher__input slds-text-longform slds-textarea"
      id="textarea-AAA111"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Write something..."
    />
    <div
      className="slds-publisher__actions slds-grid slds-grid_align-spread"
    >
      <ul
        className="slds-grid slds-publisher__toggle-visibility"
      >
        <li>
          <button
            className="slds-button slds-button_icon slds-button_icon-container"
            disabled={false}
            onClick={[Function]}
            title="Add User"
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#adduser"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Add User
            </span>
          </button>
        </li>
        <li>
          <button
            className="slds-button slds-button_icon slds-button_icon-container"
            disabled={false}
            onClick={[Function]}
            title="Attach a file"
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#attach"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Attach a file
            </span>
          </button>
        </li>
      </ul>
      <button
        className="slds-button slds-button_brand"
        disabled={true}
        onClick={[Function]}
        title="Share"
        type="button"
      >
        Share
      </button>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPublishers Comment 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-media"
  >
    <div
      className="slds-media__figure"
    >
      <div>
        <span
          className="slds-avatar slds-avatar_circle slds-avatar_medium"
        >
          <span
            className="slds-icon_container slds-icon-standard-user"
          >
            <svg
              aria-hidden="true"
              className="slds-icon"
            >
              <use
                xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#user"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              User or Account Icon
            </span>
          </span>
        </span>
      </div>
       
    </div>
    <div
      className="slds-media__body"
    >
      <div
        className="slds-publisher slds-publisher_comment"
      >
        <textarea
          className="slds-publisher__input slds-text-longform slds-input_bare"
          id="textarea-AAA2211"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Write a comment.."
        />
        <div
          className="slds-publisher__actions slds-grid slds-grid_align-spread"
        >
          <ul
            className="slds-grid slds-publisher__toggle-visibility"
          >
            <li>
              <button
                className="slds-button slds-button_icon slds-button_icon-container"
                disabled={false}
                onClick={[Function]}
                title="Add User"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="slds-button__icon"
                >
                  <use
                    xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#adduser"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Add User
                </span>
              </button>
            </li>
            <li>
              <button
                className="slds-button slds-button_icon slds-button_icon-container"
                disabled={false}
                onClick={[Function]}
                title="Attach a file"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="slds-button__icon"
                >
                  <use
                    xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#attach"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Attach a file
                </span>
              </button>
            </li>
          </ul>
          <button
            className="slds-button slds-button_brand"
            disabled={true}
            onClick={[Function]}
            title="Comment"
            type="button"
          >
            Comment
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
